// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A List Container correctly filters todos depending on the filter state 1`] = `
<ul
  className="MuiList-root-1 MuiList-padding-2"
>
  <li
    aria-labelledby="todoItemButton1Label"
    className="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-dense-9 MuiListItem-gutters-13 MuiListItem-button-14"
    data-test-id="todo-item"
    id="todoItemButton1Label"
    label="todoItemButton1Label"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "textDecoration": "line-through",
      }
    }
    tabIndex={0}
  >
    <label
      htmlFor="checkboxLabelId"
    >
      <span
        aria-label="todoItemCheckbox1Label"
        className="MuiButtonBase-root-17 MuiIconButton-root-30 MuiPrivateSwitchBase-root-26 MuiCheckbox-root-20 MuiCheckbox-colorSecondary-25 MuiPrivateSwitchBase-checked-27 MuiCheckbox-checked-21"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-35"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-36"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
          <input
            checked={true}
            className="MuiPrivateSwitchBase-input-29"
            data-indeterminate={false}
            id="todoItemCheckbox1Label"
            onChange={[Function]}
            tabIndex={-1}
            type="checkbox"
          />
        </span>
      </span>
    </label>
    <span
      className="MuiTouchRipple-root-45"
    />
  </li>
</ul>
`;

exports[`A List Container renders component 1`] = `
<ul
  className="MuiList-root-1 MuiList-padding-2"
>
  <li
    aria-labelledby="todoItemButton2Label"
    className="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-dense-9 MuiListItem-gutters-13 MuiListItem-button-14"
    data-test-id="todo-item"
    id="todoItemButton2Label"
    label="todoItemButton2Label"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "textDecoration": "",
      }
    }
    tabIndex={0}
  >
    <label
      htmlFor="checkboxLabelId"
    >
      <span
        aria-label="todoItemCheckbox2Label"
        className="MuiButtonBase-root-17 MuiIconButton-root-30 MuiPrivateSwitchBase-root-26 MuiCheckbox-root-20 MuiCheckbox-colorSecondary-25"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-35"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-36"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-29"
            data-indeterminate={false}
            id="todoItemCheckbox2Label"
            onChange={[Function]}
            tabIndex={-1}
            type="checkbox"
          />
        </span>
      </span>
    </label>
    <span
      className="MuiTouchRipple-root-45"
    />
  </li>
</ul>
`;

exports[`A List renders component 1`] = `
<ul
  className="MuiList-root-1 MuiList-padding-2"
>
  <li
    aria-labelledby="todoItemButton1Label"
    className="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-dense-9 MuiListItem-gutters-13 MuiListItem-button-14"
    data-test-id="todo-item"
    id="todoItemButton1Label"
    label="todoItemButton1Label"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "textDecoration": "line-through",
      }
    }
    tabIndex={0}
  >
    <label
      htmlFor="checkboxLabelId"
    >
      <span
        aria-label="todoItemCheckbox1Label"
        className="MuiButtonBase-root-17 MuiIconButton-root-30 MuiPrivateSwitchBase-root-26 MuiCheckbox-root-20 MuiCheckbox-colorSecondary-25 MuiPrivateSwitchBase-checked-27 MuiCheckbox-checked-21"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-35"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-36"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
          <input
            checked={true}
            className="MuiPrivateSwitchBase-input-29"
            data-indeterminate={false}
            id="todoItemCheckbox1Label"
            onChange={[Function]}
            tabIndex={-1}
            type="checkbox"
          />
        </span>
      </span>
    </label>
    <span
      className="MuiTouchRipple-root-45"
    />
  </li>
  <li
    aria-labelledby="todoItemButton2Label"
    className="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-dense-9 MuiListItem-gutters-13 MuiListItem-button-14"
    data-test-id="todo-item"
    id="todoItemButton2Label"
    label="todoItemButton2Label"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "textDecoration": "",
      }
    }
    tabIndex={0}
  >
    <label
      htmlFor="checkboxLabelId"
    >
      <span
        aria-label="todoItemCheckbox2Label"
        className="MuiButtonBase-root-17 MuiIconButton-root-30 MuiPrivateSwitchBase-root-26 MuiCheckbox-root-20 MuiCheckbox-colorSecondary-25"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-35"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-36"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-29"
            data-indeterminate={false}
            id="todoItemCheckbox2Label"
            onChange={[Function]}
            tabIndex={-1}
            type="checkbox"
          />
        </span>
      </span>
    </label>
    <span
      className="MuiTouchRipple-root-45"
    />
  </li>
</ul>
`;
